<resources>
    <string name="app_name">Popular Movies</string>
    <string name="menu_popular_first_title">Show Popular</string>
    <string name="menu_top_rated_first_title">Show Top Rated</string>
    <string name="minute_appendix"> min</string>
    <string name="score_appendix">/10</string>
    <string name="mark_as_favorite">MARK AS\nFAVORITE</string>
    <string name="videos_list_title">Trailers:</string>
    <string name="reviews_list_title">Reviews:</string>
    <string name="no_data_received">No data received</string>
    <string name="detail_activity_label">Movie Details</string>
    <string name="remove_mark_favorite">REMOVE FROM\nFAVORITES</string>
    <string name="no_trailers_title">No trailers :(</string>
    <string name="no_reviews_title">No reviews :(</string>
    <string name="menu_favorite_first_title">Show Favorite</string>
</resources>
