<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.anton.popularmovies.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/data_error_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data_received"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/scroll_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingTop="40dp"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                tools:ignore="ObsoleteLayoutParam" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2"
                    android:paddingBottom="32dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:id="@+id/poster_image_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="240dp"
                        android:layout_gravity="left"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_gravity="left"
                        android:layout_row="0"
                        android:orientation="vertical"
                        android:paddingLeft="40dp">

                        <TextView
                            android:id="@+id/date_text_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingBottom="10dp"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/duration_text_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingBottom="10dp"
                            android:textSize="22sp"
                            android:textStyle="italic|bold" />

                        <TextView
                            android:id="@+id/score_text_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingBottom="10dp"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/favorite_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:background="@color/colorButton"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/mark_as_favorite"
                            android:textColor="@color/colorButtonText"
                            android:onClick="onClickFavorite"
                            android:textSize="12sp"

                            />
                    </LinearLayout>
                </GridLayout>

                <TextView
                    android:id="@+id/overview_text_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark" />
                \

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/videos_list_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/trailer_list_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                </ListView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews_list_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp" />

                <ListView
                    android:id="@+id/review_list_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                </ListView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
